our mission spacing fixed

--- a/Grainjar-Website/css/main.css
+++ b/Grainjar-Website/css/main.css
@@ -709,7 +709,7 @@ section#title-banner{
 /*About grainjar*/
 
 #about-container{
-	margin-top:-5em;
+	margin-top:-2em;
 }
 
 .line {
@@ -717,7 +717,7 @@ section#title-banner{
 	height:13em;
 	position:absolute;
 	margin-left:-3em;
-	margin-top:-2em;
+	margin-top:0.5em;
 }
 
 .our-mission p{
